--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body{
-  background-color:#cccc33;
+  background-color:#A3E0F4;
 }
 p{
-  text-align:center;color:orange;font-size:50px;
+  text-align:center;color:yellowgreen;font-size:60px;
 }
 h1{
  Font-size:60px;Text-align:center;border-style:dotted;color:green;margin:20px;padding:5px;background-color:}
@@ -10,9 +10,11 @@ h2{
  text-align:center; Border-style:dashed;color:powderblue;border-color:orange;background-color:#da532c;font-size:40px;margin:40px;
 }
 h3{
+  text-align:center;color:yellowgreen;font-size:70px;static;
+}
+h4{
   text-align:center;color:yellowgreen;font-size:28px;static;
 }
-
 img{
   display: block;
   margin-left: auto;
