--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ p{
   text-align:center;color:yellowgreen;font-size:60px;
 }
 h1{
- Font-size:60px;Text-align:center;border-style:dotted;color:green;margin:20px;padding:5px;background-color:}
+ Font-size:60px;Text-align:center;border-style:dotted;color:yellowgreen;margin:20px;padding:5px;background-color:white}
 h2{
  text-align:center; Border-style:dashed;color:powderblue;border-color:orange;background-color:#da532c;font-size:40px;margin:40px;
 }
