--- a/css/style.css
+++ b/css/style.css
@@ -35,5 +35,5 @@ ol{
   color:orange;background-color:powderblue;font-size:20px;margin-bottom:3%;
 }
   button{
-    padding:20px;color:pink;
+    padding:20px;color:pink;border-radius:50%;
 }
