--- a/css/style.css
+++ b/css/style.css
@@ -35,5 +35,5 @@ ol{
   color:orange;background-color:powderblue;font-size:20px;margin-bottom:3%;
 }
   button{
-    padding:20px;width:50px;height:50px;background-color:pink;color:orange;border-radius:50%;
+    <div style="width:100px;height:100px;background-color:pink;color:orange;border-radius:50%;
 }
