--- a/css/style.css
+++ b/css/style.css
@@ -35,5 +35,5 @@ ol{
   color:orange;background-color:powderblue;font-size:20px;margin-bottom:3%;
 }
   button{
-    <div style="width:800px;height:800px;background-color:pink;color:orange;border-radius:400%;
+    style="width:800px;height:800px;background-color:pink;color:green;border-radius:400%;
 }
