--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,12 @@ ul{
 ol{
   color:orange;background-color:powderblue;font-size:20px;margin-bottom:3%;
 }
-  button{
-    style="width:800px;height:800px;background-color:pink;color:green;border-radius:400%;
-}
+  .button{
+     background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;}
