--- a/css/style.css
+++ b/css/style.css
@@ -35,11 +35,4 @@ ol{
   color:orange;background-color:powderblue;font-size:20px;margin-bottom:3%;
 }
   .button{
-     background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;}
+     }
