--- a/css/style.css
+++ b/css/style.css
@@ -34,5 +34,6 @@ ul{
 ol{
   color:orange;background-color:powderblue;font-size:20px;margin-bottom:3%;
 }
-  .button{
+  ..button{
+    background-color:orange;color:yellow;
      }
